--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,164 @@
+html, body {
+    padding: 0;
+    margin: 0;
+    min-height: 100%;
+}
+body {
+    height: 100%;
+    width: 100%;
+    background: url('images/back2.jpg');
+    background-size: cover;
+}
+body::before {
+    content: "";
+}
+h5 {
+    margin:20px auto;
+    width:20vw;
+    text-align:center;
+    font-family: helvetica;
+    font-weight:700;
+    font-size:3em;
+}
+    /*
+    margin:auto;
+    width:60vw;
+    text-align:justify;
+    font-family:didot;
+    line-height:1.5;
 
+    overflow:visible;
+    width: 100%;
+    margin: 8em;
+    background-color: red;
+    */
+#grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, calc(100%/ 3 - 2em)));    
+    column-gap:1em;
+    margin-top: -2em;
+    padding: 0 5%;
+    justify-content: space-around;
+    min-width: 600px;
+}
+#mask {
+    position:absolute;
+    margin: 30px calc(-100% * 4.4 / 90);
+    height: 100%;
+    width: 100%;
+    background: url('images/back.jpg');
+    background-size: 100%;
+    opacity: 0.5;
+         background-repeat: repeat-y;
+
+     /*margin: 0 calc(-100% * 4.4 / 90);*/
+     /*position: absolute;
+     top: 0;
+     bottom: 0;
+ 
+     background: url('images/back.jpg');
+     background-repeat: repeat-y;
+     opacity: 0.5;
+     z-index: -1;
+     background-color: red;
+     background-size: cover;*/
+}
+.mask {
+    z-index: -1;
+    position:relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: red;
+    --value: 0.4;
+    -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
+    mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
+}
+.crop {
+    object-fit: contain;
+    display: flex;
+    align-items: center;
+    clip-path:inset(14% 1% 32% 2%);
+}
+.instagram-media {
+    min-width: 600px;
+}
+.startBackground {
+    height: 100%;
+    width: 100%;
+    position:absolute;
+    background-image: url('images/new.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    --value: 0.4;
+    -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
+    mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
+}
+#start {
+    height: 100vh;
+    background-color: rgb(20, 25, 83);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 40px;
+}
+
+#photo {
+    position: relative;
+    margin: 2em 0;
+    display: block;
+    height: 50vh;
+    width: auto;
+    animation-name: appearFromBottom;
+    animation-duration: 2s;
+}
+#name {
+    font-size: 5em;
+    font-weight: 700;
+    color:white;
+    margin-bottom: 0.3em;
+    z-index: 3;
+}
+.intro.hello {
+    font-size: 2em;
+    text-align: left;
+}
+.intro {
+    color: white;
+    font-size: 3em;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    position: relative;
+    display: inline-block;
+    margin: 0 auto;
+    animation-name: appearFromLeft;
+    animation-duration: 2s;
+}
+@keyframes appearFromLeft {
+    0%   {opacity: 0%;left:100px;}
+    100% {opacity: 100%;left:0px;}
+}
+@keyframes appearFromBottom {
+    0%   {opacity: 0%;top:100px;}
+    100% {opacity: 100%;top:0px;}
+}
+@keyframes appear {
+    0%   {opacity: 0%}
+    100% {opacity: 100%}
+}
+@keyframes rotate {
+    
+}
+.js-scroll {
+    transition: opacity 1s;
+    position: relative;
+}
+.invisible {
+    opacity: 0;
+}
+
+.visible {
+    animation-name: appear;
+    animation-duration: 3s;
+    opacity: 1;
+}
