--- a/src/styles.css
+++ b/src/styles.css
@@ -1,164 +1,227 @@
-html, body {
-    padding: 0;
-    margin: 0;
-    min-height: 100%;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
 }
 body {
-    height: 100%;
-    width: 100%;
-    background: url('./images/back2.jpg');
-    background-size: cover;
-}
+  height: 100%;
+  width: 100%;  
+  background: url("./images/back2.jpg");
+  background-size: cover;
+  
+  }
+/*removed*/
+/*
 body::before {
-    content: "";
+  content: "";
 }
 h5 {
-    margin:20px auto;
-    width:20vw;
-    text-align:center;
-    font-family: helvetica;
-    font-weight:700;
-    font-size:3em;
-}
-    /*
-    margin:auto;
-    width:60vw;
-    text-align:justify;
-    font-family:didot;
-    line-height:1.5;
+  margin: 20px auto;
+  width: 20vw;
+  text-align: center;
+  font-family: helvetica;
+  font-weight: 700;
+  font-size: 3em;
+}*/ /**/
+/*
+  margin:auto;
+  width:60vw;
+  text-align:justify;
+  font-family:didot;
+  line-height:1.5;
 
-    overflow:visible;
-    width: 100%;
-    margin: 8em;
-    background-color: red;
-    */
+  overflow:visible;
+  width: 100%;
+  margin: 8em;
+  background-color: red;
+  */
 #grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, calc(100%/ 3 - 2em)));    
-    column-gap:1em;
-    margin-top: -2em;
-    padding: 0 5%;
-    justify-content: space-around;
-    min-width: 600px;
-}
-#mask {
-    position:absolute;
-    margin: 30px calc(-100% * 4.4 / 90);
-    height: 100%;
-    width: 100%;
-    background: url('./images/back.jpg');
-    background-size: 100%;
-    opacity: 0.5;
-         background-repeat: repeat-y;
-
-     /*margin: 0 calc(-100% * 4.4 / 90);*/
-     /*position: absolute;
-     top: 0;
-     bottom: 0;
- 
-     background: url('images/back.jpg');
-     background-repeat: repeat-y;
-     opacity: 0.5;
-     z-index: -1;
-     background-color: red;
-     background-size: cover;*/
-}
-.mask {
-    z-index: -1;
-    position:relative;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: red;
-    --value: 0.4;
-    -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
-    mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
+  display: grid;
+  /*removed*/
+  /*
+  grid-template-columns: repeat(auto-fit, minmax(400px, calc(100% / 3 - 2em)));*/
+   /*Added*/
+  grid-template-columns: 1fr 1fr 1fr;/**/
+  column-gap: 1em;
+  margin-top: -2em;
+  padding: 0 5%;
+    /*removed*/
+  /*justify-content: space-around;*/
+  /*min-width: 600px;*/
 }
 .crop {
-    object-fit: contain;
-    display: flex;
-    align-items: center;
-    clip-path:inset(14% 1% 32% 2%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  clip-path: inset(14% 1% 32% 2%);
+  overflow:hidden;
 }
+instagram-media {
+  object-fit:fill;
+}
+/*removed*/
+/*
 .instagram-media {
-    min-width: 600px;
-}
+  min-width: 600px;
+}*/
 .startBackground {
-    height: 100%;
-    width: 100%;
-    position:absolute;
-    background-image: url('./images/new.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    --value: 0.4;
-    -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
-    mask-image: linear-gradient(to right, rgba(0, 0, 0, var(--value)), rgba(0, 0, 0, 0.137) 20% 80%, rgba(0, 0, 0, var(--value)));
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-image: url("./images/new.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  --value: 0.4;
+  -webkit-mask-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, var(--value)),
+    rgba(0, 0, 0, 0.137) 20% 80%,
+    rgba(0, 0, 0, var(--value))
+  );
+  mask-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, var(--value)),
+    rgba(0, 0, 0, 0.137) 20% 80%,
+    rgba(0, 0, 0, var(--value))
+  );
 }
 #start {
-    height: 100vh;
-    background-color: rgb(20, 25, 83);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 40px;
+  height: 100vh;
+  background-color: rgb(20, 25, 83);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 40px;
 }
 
 #photo {
-    position: relative;
-    margin: 2em 0;
-    display: block;
-    height: 50vh;
-    width: auto;
-    animation-name: appearFromBottom;
-    animation-duration: 2s;
+  position: relative;
+  margin: 2em 0;
+  display: block;
+  /*modified*/
+  width: min(50vw, 50vh);
+  height: auto;
+  /**/
+  animation-name: appearFromBottom;
+  animation-duration: 2s;
 }
 #name {
-    font-size: 5em;
-    font-weight: 700;
-    color:white;
-    margin-bottom: 0.3em;
-    z-index: 3;
+  font-size: 5rem;
+  font-weight: 700;
+  color: white;
+  /*modified*/
+  margin-top: 0.3rem;
+  margin-bottom: 0.8rem; 
+  z-index: 3;
+  text-align: center;
 }
 .intro.hello {
-    font-size: 2em;
-    text-align: left;
+  font-size: 2rem;
+  text-align: left;
 }
 .intro {
-    color: white;
-    font-size: 3em;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    position: relative;
-    display: inline-block;
-    margin: 0 auto;
-    animation-name: appearFromLeft;
-    animation-duration: 2s;
+  color: white;
+  font-size: 3rem;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  position: relative;
+  display: inline-block;
+  margin: 0 auto;
+  animation-name: appearFromLeft;
+  animation-duration: 2s;
+  text-align: center;
 }
 @keyframes appearFromLeft {
-    0%   {opacity: 0%;left:100px;}
-    100% {opacity: 100%;left:0px;}
+  0% {
+    opacity: 0%;
+    left: 100px;
+  }
+  100% {
+    opacity: 100%;
+    left: 0px;
+  }
 }
 @keyframes appearFromBottom {
-    0%   {opacity: 0%;top:100px;}
-    100% {opacity: 100%;top:0px;}
+  0% {
+    opacity: 0%;
+    top: 100px;
+  }
+  100% {
+    opacity: 100%;
+    top: 0px;
+  }
 }
 @keyframes appear {
-    0%   {opacity: 0%}
-    100% {opacity: 100%}
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
 }
 @keyframes rotate {
-    
 }
 .js-scroll {
-    transition: opacity 1s;
-    position: relative;
+  transition: opacity 1s;
+  position: relative;
 }
 .invisible {
-    opacity: 0;
+  opacity: 0;
 }
 
 .visible {
-    animation-name: appear;
-    animation-duration: 3s;
-    opacity: 1;
+  animation-name: appear;
+  animation-duration: 3s;
+  opacity: 1;
+}
+@media screen and (max-width: 1000px) {
+  #name {
+    font-size: 4rem;
+  }
+  .intro.hello {
+    font-size: 2rem;
+  }
+  .intro {
+    font-size: 3rem;
+  }
+   /*Added*/
+  #grid-container {
+    grid-template-columns: 1fr 1fr;
+  }
+  #photo {
+    width: min(60vw, 60vh);
+  }
+  /**/
+}
+@media screen and (max-width: 700px) {
+  #name {
+    font-size: 3rem;
+  }
+  .intro.hello {
+    font-size: 1.3rem;
+  }
+  .intro {
+    font-size: 2rem;
+  }
+  /*Added*/
+  #grid-container {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 400px) {
+  #name {
+    font-size: 2.2rem;
+    margin-top: 1rem;
+    margin-bottom: 2.5rem;
+  }
+  .intro.hello {
+    font-size: 1.3rem;
+  }
+  .intro {
+    font-size: 1.6rem;
+  }
+  /*Added*/
+  #photo {
+    width: min(70vw, 70vh);
+  }
 }
